avances imprevisiblemente potentes y titanicos

--- a/Toodle/bin/.gitignore
+++ b/Toodle/bin/.gitignore
@@ -1,5 +1,3 @@
-/CourseTest.class
-/ExerciseTest.class
-/QuestionStatistic.class
-/StatisticTest.class
-/ApplicationTest.class
+/EmailSystem.jar
+/StudentTest.class
+/TeacherTest.class
